# teste_agents

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  logging_utils.py  main.py
app/debate/: __init__.py  agents.py  autogen_runner.py  formatter.py  prompts.py
app/graph/: __init__.py  build_graph.py  edges.py  nodes.py  services.py  state.py
app/graph/handlers/: __init__.py  base.py  debate.py  failure.py  intake.py  research.py  save.py  section_pipeline.py  synthesis.py
app/llm/: __init__.py  models.py  openai_client.py
app/prompts/: __init__.py  builders.py  fragments.py
app/research/: __init__.py  parser.py  summarizer.py  web_search.py
app/workflow/: __init__.py  error_policy.py  models.py  section_recovery.py  section_service.py  state_adapter.py
app/writer/: __init__.py  article_assembler.py  article_writer.py  formatter.py  markdown_saver.py  outline.py  section_reviewer.py  section_writer.py
multiagents_debate_writer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outputs/: amazonia_restauracao.md  artigo_final.md  judicializacao_saude.md  test_graph_insufficiency.md  test_graph_run_artigo.md  test_writer_artigo.md
tests/: test_debate_enrichment.py  test_debate_schema.py  test_graph_integration.py  test_openai_smoke.py  test_prompt_contracts.py  test_review_flow.py  test_runtime_resilience.py  test_section_recovery.py  test_writer_components.py
